--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
   margin: 0px;
 }
 
+.fira-sans-condensed-thin {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
 .App {
   text-align: center;
 }
@@ -14,10 +20,14 @@
   color: white;
   gap: 900px;
   padding: 10px 10px;
+  height: 75px;
   z-index: 1;
   display: grid; /* Change to grid display */
   grid-template-columns: repeat(4, 1fr); /* Create 4 equal-width columns */
   top: 0;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
 .nav__links{
@@ -29,6 +39,17 @@
   color: rgb(0, 0, 0);
   text-decoration: none;
   font-size: 35px;
+  
+}
+
+.search_bar {
+  grid-column: 4 / 5; /* Position it in the fourth grid column */
+  padding: 8px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid #000000;
+  margin-top: 20px;
+  height: 40px;
 }
 
 .home_link{
@@ -36,6 +57,7 @@
   text-decoration: none;
   list-style-type: none;
   padding: 10px;
+  top: 14px;
 }
 
 .about_link{
@@ -43,6 +65,7 @@
   text-decoration: none;
   list-style-type: none;
   padding: 10px;
+  top: 14px;
 }
 
 .products_link{
@@ -50,6 +73,8 @@
   text-decoration: none;
   list-style-type: none;
   padding: 10px;
+  top: 14px;
+
 }
 
 .home_header{
