--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
 .container{
-    margin-top: 5px !important;
+    margin-top: 100px !important;
     text-align: center !important;
 }
 
@@ -23,20 +23,8 @@ button{
   border: none;
 }
 
-.total-price{
-  text-align: right;
-  padding: 15px;
-  margin-top: 50px;
-}
-
 h2{
   font-weight: bolder;
-}
-
-/* Home.css */
-.custom-padding {
-  padding-left: 2rem; /* Adjust as needed */
-  padding-right: 2rem; /* Adjust as needed */
 }
 
 .no-gutters {
@@ -44,16 +32,56 @@ h2{
   margin-left: 0;
 }
 
-.no-gutters > .col,
-.no-gutters > [class*="col-"] {
-  padding-right: 0;
-  padding-left: 0;
+.image_grid{
+  display: grid;
+  grid-template-columns: repeat(13, 1fr);
+  grid-template-rows: repeat(13, 1fr);
+  gap: 10px;
+}
+
+.item1 {
+  grid-column: 1 / 9; /* Start at column line 1, end at column line 6 */
+  grid-row: 1 / 6;    /* Start at row line 1, end at row line 6 */
+}
+
+.item2 {
+  grid-column: 9 / 14; /* Start at column line 6, end at column line 11 */
+  grid-row: 1 / 6;     /* Start at row line 1, end at row line 6 */
+}
+
+.item3 {
+  grid-column: 1 / 6; /* Start at column line 1, end at column line 6 */
+  grid-row: 6 / 11;   /* Start at row line 6, end at row line 11 */
+}
+
+.item4 {
+  grid-column: 6 / 11; /* Start at column line 6, end at column line 11 */
+  grid-row: 6 / 11;    /* Start at row line 6, end at row line 11 */
 }
 
 .figure-no-border {
   margin: 0;
   padding: 0;
+  
 }
+
+.image1{
+  border-radius: 5%;
+}
+
+.image2{
+  border-radius: 5%;
+}
+
+.image3{
+  border-radius: 5%;
+}
+
+
+.image4{
+  border-radius: 5%;
+}
+
 .figure-img {
   display: block;
   width: 100%;
