--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   padding: 0px;
   margin: 0px;
+  text-decoration: none;
 }
 
 .fira-sans-condensed-thin {
@@ -18,7 +19,7 @@
   background-color: #e6e6e6;
   position: fixed;
   color: white;
-  gap: 900px;
+  gap: 800px;
   padding: 10px 10px;
   height: 75px;
   z-index: 1;
@@ -40,6 +41,10 @@
   text-decoration: none;
   font-size: 35px;
   
+}
+
+.nav__links a:hover{
+  color: rgb(204, 5, 204);
 }
 
 .search_bar {
@@ -81,5 +86,5 @@
   border-radius: 5px;
   font-size: 35px;
   color: rgb(0, 0, 0);
-  padding: 10px;
+  padding: 0px 0px 0px 350px;
 }
