--- a/src/App.css
+++ b/src/App.css
@@ -82,9 +82,15 @@
 
 }
 
-.home_header{
+.logo{
   border-radius: 5px;
-  font-size: 35px;
+  height: 50px;
   color: rgb(0, 0, 0);
-  padding: 0px 0px 0px 350px;
+  padding: 0px 0px 0px 550px;
+}
+
+.section-2-header{
+  font-weight: bold;
+  text-align: left;
+  padding: 20px 40px;
 }
