--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,71 +1,4 @@
-.nav__bar{
-    background-color: #ffffff;
-  color: white;
-  padding: 10px 20px;
-}
-
-nav{
-    text-decoration: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-right: 100px;
-}
-
-.links {
-    display: flex;
-}
-  
-.links a {
-    color: white;
-    text-decoration: none;
-    padding: 8px 16px;
-    border-radius: 5px;
-    margin: 0 5px;
-    background-color: #000000;
-    text-decoration: none !important;
-}
-  
-.links a:hover {
-    background-color: #000000;
-}
-
-.page__name{
-    background-color: #ffffff;
-    color: black;
-    padding: 10px 20px;
-    text-decoration: none;
-    font-weight: bolder;
-    border-radius: 15px;
-}
-
-.no__bullets {
-    list-style-type: none;
-    padding: 0; /* Optional: Remove padding */
-}
-
-.total-price{
-    text-align: right;
-    padding: 15px;
-    margin-top: 50px;
-    margin-bottom: 50px;
- }
-
-.left__text{
-    text-align: center;
- }
-
-.mb-4{
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-
-.text-center mt-5{
-    text-align: left;
-}
-
-p{
-    padding-top: 14px;
-    padding-bottom: 14px;
+.about-logo{
+    height: 250px;
 }
   
