--- a/src/App.css
+++ b/src/App.css
@@ -33,10 +33,10 @@
 
 .nav__links{
   display: grid;
-  grid-template-columns: repeat(3, auto);
+  grid-template-columns: repeat(5, auto);
   list-style-type: none;
   margin: 0;
-  padding: 10pxs;
+  padding: 10px;
   color: rgb(0, 0, 0);
   text-decoration: none;
   font-size: 35px;
@@ -79,7 +79,22 @@
   list-style-type: none;
   padding: 10px;
   top: 14px;
+}
 
+.womens_link{
+  color: black;
+  text-decoration: none;
+  list-style-type: none;
+  padding: 10px;
+  top: 14px;
+}
+
+.mens_link{
+  color: black;
+  text-decoration: none;
+  list-style-type: none;
+  padding: 10px;
+  top: 14px;
 }
 
 .logo{
