--- a/src/components/product.css
+++ b/src/components/product.css
@@ -35,6 +35,11 @@ padding: 7px;
 border: none;
 }
 
+.btn-custom:hover{
+  background-color: rgb(76, 199, 142);
+  color: black;
+}
+
 .total-price{
  text-align: right;
  padding: 15px;
@@ -46,9 +51,12 @@ h2{
 font-family: Arial, Helvetica, sans-serif;
 }
 
-.row {
-padding-left: 5rem; /* Adjust as needed */
-padding-right: 5rem; /* Adjust as needed */
+.container{
+  margin-top: 100px !important;
+  text-align: center !important;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
 .no-gutters {
@@ -104,6 +112,32 @@ height: auto; /* Maintain aspect ratio */
 
 .card-body {
 padding: 1rem; /* Adjust padding inside the card body as needed */
+text-align: left;
+border: none;
+}
+
+.card{
+  border: none;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+
+.header-image{
+  max-width: 1300px;
+  margin: 0px 0px 100px;
+}
+
+.products-header-text{
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+  font-size: 75px;
+  position: absolute;
+  color: azure;
+  top: 740px;
+  left: 315px;
 }
 
 
