--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -287,8 +287,16 @@
   color: rgb(76, 199, 142);
 }
 
+.custom-line{
+  padding: 10px 0px;
+}
+
 .contact-box{
-  background-color: rgb(93, 189, 152);
+  background-color: rgb(0, 0, 0);
+  color: azure;
+  height: 500px;
+  margin-top: 100px;
+  padding: 100px 300px;
 }
 
 
