--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .nav__bar{
-  background-color: #e6e6e6;
+  background-color: #000000;
   position: fixed;
   color: white;
   gap: 800px;
@@ -37,9 +37,9 @@
   list-style-type: none;
   margin: 0;
   padding: 10px;
-  color: rgb(0, 0, 0);
+  color: rgb(252, 252, 252);
   text-decoration: none;
-  font-size: 35px;
+  font-size: 25px;
   
 }
 
@@ -47,18 +47,19 @@
   color: rgb(76, 199, 142);
 }
 
-.search_bar {
+/* .search_bar {
   grid-column: 4 / 5; /* Position it in the fourth grid column */
-  padding: 8px;
+  /* padding: 8px;
   font-size: 16px;
   border-radius: 4px;
-  border: 1px solid #000000;
+  border: 1px solid #ffffff;
   margin-top: 20px;
   height: 40px;
-}
+  z-index: 1;
+} */ 
 
 .home_link{
-  color: black;
+  color: white;
   text-decoration: none;
   list-style-type: none;
   padding: 10px;
@@ -66,7 +67,7 @@
 }
 
 .about_link{
-  color: black;
+  color: white;
   text-decoration: none;
   list-style-type: none;
   padding: 10px;
@@ -74,7 +75,7 @@
 }
 
 .products_link{
-  color: black;
+  color: rgb(255, 255, 255);
   text-decoration: none;
   list-style-type: none;
   padding: 10px;
@@ -82,7 +83,7 @@
 }
 
 .womens_link{
-  color: black;
+  color: white;
   text-decoration: none;
   list-style-type: none;
   padding: 10px;
@@ -90,7 +91,7 @@
 }
 
 .mens_link{
-  color: black;
+  color: white;
   text-decoration: none;
   list-style-type: none;
   padding: 10px;
@@ -100,7 +101,7 @@
 .logo{
   border-radius: 5px;
   height: 50px;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   padding: 0px 0px 0px 310px;
 }
 
