--- a/src/components/product.css
+++ b/src/components/product.css
@@ -138,6 +138,23 @@ border: none;
   padding: 30px 0px;
 }
 
+.bottom-section{
+  background-color: black;
+  height: 350px;
+  color: white;
+  display: flex;
+  justify-content: center; /* Centers horizontally */
+  align-items: center; /* Centers vertically */
+}
+
+.bottom-header{
+  text-align: center;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+  font-size: 100px;
+}
+
 
 
 
